[package]
name = "winres"
description = "Create and set windows icons and metadata for executables"
version = "0.1.4"
authors = ["Max Resch <resch.max@gmail.com>"]
license = "MIT"
repository = "https://github.com/mxre/winres"
documentation= "https://mxre.github.io/winres"

[lib]
path = "lib.rs"

[dependencies]
toml = "0.4"

[dev-dependencies]
# used for tests
winapi = "0.2"
