[package]
name = "winres"
description = "Create and set windows icons and metadata for executables"
version = "0.1.12"
authors = ["Max Resch <resch.max@gmail.com>"]
license = "MIT"
repository = "https://github.com/mxre/winres"
documentation= "https://docs.rs/winres/*/winres/"

[lib]
path = "lib.rs"

[dependencies]
toml = "0.5"

[dev-dependencies]
# used for tests
winapi = { version = "0.3", features = [ "winnt" ] }
