[package]
name = "winres-example"
description = "Example for winres"
version = "0.1.1"
authors = ["Max Resch <resch.max@gmail.com>"]
license = "MIT"
repository = "https://github.com/mxre/winres"
documentation= "https://mxre.github.io/winres"
build= "build.rs"

[package.metadata.winres]
LegalCopyright = "Copyright © 2016-2017"

[dependencies]
winapi = "0.2.6"
user32-sys = "0.2.0"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = { path = ".." }
winapi = "0.2.6"
